# documind

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  install.sh
.claude/: settings.json
apps/api/: .dockerignore  Dockerfile.api  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_phase1_auth_tenancy.py  0002_phase2_ingestion.py  0003_phase3_rag.py  0004_phase4_byok_quota.py
apps/api/app/: cli.py  main.py
apps/api/app/api/: __init__.py  cookies.py  deps.py  errors.py  schemas.py
apps/api/app/api/routes/: admin.py  auth.py  config.py  documents.py  health.py  projects.py  query.py  settings.py
apps/api/app/core/: config.py  db.py  security.py  text_norm.py
apps/api/app/ingestion/: __init__.py  chunker.py  guards.py  reembed.py  storage.py  store.py  worker.py
apps/api/app/ingestion/parsers/: __init__.py  docx.py  markitdown_fallback.py  pdf.py  text.py
apps/api/app/models/: __init__.py  auth_identity.py  base.py  chunk.py  conversation.py  document.py  enums.py  ingest_job.py  invite.py  message.py  operator_default.py  project.py  provider_key.py  provider_selection.py  refresh_token.py  system_settings.py  usage.py  user.py
apps/api/app/providers/: __init__.py  errors.py  interfaces.py  registry.py  resolver.py  spec.py
apps/api/app/providers/adapters/: __init__.py  anthropic.py  gemini.py  groq.py  local_bge_m3.py  openai.py
apps/api/app/providers/keystore/: __init__.py  crypto.py  operator_default.py  store.py  validation.py
apps/api/app/rag/: __init__.py  answer.py  budget.py  citations.py  grounding.py  injection.py  prompt.py  sentinel.py
apps/api/app/rag/retrieval/: __init__.py  fuse.py  keyword.py  rerank.py  types.py  vector.py
apps/api/app/security/: scoping.py
apps/api/app/services/: auth_service.py  quota_service.py  rate_limit.py  settings_service.py
apps/api/tests/: conftest.py  fakes.py  test_health.py
apps/api/tests/integration/: conftest.py  fixtures_docs.py  test_admin_api.py  test_auth_flows.py  test_cli_bootstrap.py  test_documents_api.py  test_ingestion.py  test_operator_default.py  test_parsers.py  test_projects_api.py  test_query_rag.py  test_quota.py  test_settings_api.py  test_tenancy.py
apps/api/tests/unit/: test_anthropic_adapter.py  test_chunker.py  test_citations.py  test_gemini_adapter.py  test_gemini_chat_adapter.py  test_grounding.py  test_guards.py  test_injection.py  test_keystore_crypto.py  test_keystore_rotation.py  test_openai_groq_adapters.py  test_registry_extensibility.py  test_rerank.py  test_resolver.py  test_resolver_byok.py  test_rrf.py  test_security.py  test_sentinel.py  test_text_norm.py  test_validation.py
(+135 files in other folders)
