[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "documind-api"
version = "0.0.0"
description = "DocuMind API — self-hostable multi-tenant RAG platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "pydantic[email]",
    "email-validator",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pgvector",
    "httpx",
    "argon2-cffi",
    "pyjwt",
    "cryptography",
    "google-genai",
    "openai",
    "anthropic",
    "groq",
    "pypdf",
    "python-docx",
    "markitdown",
    "defusedxml",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "anyio",
    "ruff",
    "mypy",
    "black",
]
# Opt-in offline embeddings (bge-m3). NOT installed by default — requires >=4GB
# RAM (ARCHITECTURE.md section 9). Enable with ENABLE_LOCAL_EMBEDDINGS.
local-embeddings = [
    "sentence-transformers",
    "torch",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
